--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@azure/ms-rest-nodeauth": "^3.1.1",
+		"@trpc/client": "^10.12.0",
+		"@trpc/server": "^10.12.0",
+		"delay": "^5.0.0",
+		"dotenv": "^16.0.3",
+		"mssql": "^9.1.1",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.28.2",
+		"tedious": "^15.1.3",
+		"trpc-sveltekit": "^3.4.2"
+	}
 }
